# lecture-video-rag

./: .gitignore  LICENSE  README.md  pyproject.toml
dev/: empty_rag_example.ipynb  example.env  example.ipynb  hyperparameters.py  qa_datasets.py  rag_example.ipynb
dev/flagged/: log.csv
src/ASR/: utils.py  whisp.py  whisper.py
src/DB/: chroma.py
src/LLM/: llama_cpp_model.py
src/OCR/: easyocr.py  tesseract.py  utils.py
src/RAG/: generator.py  retriever.py  storage.py  system.py
src/embed/: nomic.py
src/utils/: hash.py  seeds.py  text.py  torch.py
