[project]
name = "lecture-video-rag"
version = "0.1.0"
description = "Lecture Video Search and Question Answering using RAG - Master's Thesis Artifact"
authors = [
    {name = "repetitioestmaterstudiorum", email = "44611591+repetitioestmaterstudiorum@users.noreply.github.com"},
]
dependencies = [
    "wget>=3.2",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "torch>=2.3.0",
    "transformers>=4.41.2",
    "numpy>=1.26.4",
    "easyocr>=1.7.1",
    "opencv-python>=4.10.0.82",
    "pytesseract>=0.3.10",
    "PyPDF2>=3.0.1",
    "openai-whisper>=20231117",
    "llama-cpp-python>=0.2.77",
    "einops>=0.8.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
package-dir = "src"

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.4",
    "python-dotenv>=1.0.1",
    "ipywidgets>=8.1.3",
    "tqdm>=4.66.4",
    "gradio>=4.36.0",
]
